# jaxfun

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Chebyshev.py  DrivenCavity_lstsq.html  Helmholtz_lstsq.html  JChebyshev.py  JLegendre.py  LICENSE  Legendre.py  PR_DESCRIPTION.md  PR_DESCRIPTION_README.md  README.md  TODO.md  Wave_lstsq.html  annulus.html  common.py  curvilinear.html  diff.py  fastgl.py  formlanguage.html  index.html  index_preview.html  poisson2D.html  polar.html  pyproject.toml  ruff.toml  testing.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy-notebooks.yml  lint.yml  pytest.yml
docs/: testing.md
examples/: Burgers_lstsq.py  DrivenCavity.py  DrivenCavity_lstsq.py  Helmholtz_lstsq.ipynb  Helmholtz_vpinn.py  Stokes.py  advection1D_backward_euler.py  biharmonic2D.py  cahn_hilliard2D_etdrk4.py  coupled1D.py  curvilinear_poisson1D.py  diffusion1D_backward_euler.py  diffusion1D_rk4.py  helmholtz1D.py  helmholtz2D.py  kdv1D_rk4.py  nls1D_etdrk4.py  pg.py  poisson.py  poisson1D.py  poisson1D_curv.py  poisson1D_periodic.py  poisson1D_spikan.py  poisson2D.py  poisson2D_curv.py  poisson2D_lstsq.py  poisson2D_parabolic.py  poisson2D_parametric.py  poisson2D_parametric2.py  poisson2D_periodic.py  poisson2D_periodic_shm.py  poisson3D.py  poisson3D_periodic.py  polar.ipynb  sphere_helmholtz.py  zk2D_rk4.py
examples/data/: cavity_5000.vtk  drivencavity_Re10_N100.npy
examples/notebooks/: DrivenCavity_lstsq.ipynb  DrivenCavity_lstsq.py  Helmholtz_lstsq.ipynb  Helmholtz_lstsq.py  Wave_lstsq.py  annulus.ipynb  annulus.py  curvilinear.py  formlanguage.py  notebooks.yml  poisson2D.py  polar.ipynb  polar.py
examples/notebooks/old/: DrivenCavity_lstsq.ipynb  annulus.ipynb  polar.ipynb
jaxfun/: Basespace.py  Chebyshev.py  Fourier.py  Jacobi.py  Legendre.py  __init__.py  arguments.py  composite.py  coordinates.py  forms.py  functionspace.py  inner.py  operators.py  tensorproductspace.py  testing.py
jaxfun/pinns/: __init__.py  bcs.py  embeddings.py  freeze.py  mesh.py  module.py
jaxfun/tests/: test_approximations.py
jaxfun/utils/: __init__.py  common.py  fastgl.py
sandbox/: Burgers_lstsq.py  Diffusion_BE_lstq.py  Diffusion_FE_lstq.py  Diffusion_lstq_march.py  DrivenCavity.py  DrivenCavityTime.py  DrivenCavity_lstsq.py  ExponentialDecay_lstq.py  Helmholtz_flax.py  Helmholtz_lstsq.ipynb  Helmholtz_lstsq.py  Helmholtz_multi.py  Helmholtz_vpinn.py  Triangle_lstsq.py  Triangle_time_lstsq.py  Wave_FE_lstq.py  Wave_lstdq_marimo.html  Wave_lstsq.html  Wave_lstsq.ipynb  Wave_lstsq.py  Wave_lstsq_march.py  Wave_lstsq_marimo.html  _bench_lu_kernel.py  _bench_matvec.py  _bench_merge.py  _bench_solve.py  _bench_solve_kron.py  _bench_solve_vs_solve2.py  _bench_tpmats_fourier.py  _bench_tpmats_solve.py  _bench_wavenumber_solver.py  _check_src.py  _debug3.py  _debug4.py  _debug5.py  _debug6.py  _debug7.py  _debug_biharmonic.py  _debug_biharmonic2.py  _debug_eliminate.py  (+38 more)
src/: Chebyshev.py  Legendre.py  testing.py
src/jaxfun/: Jacobi.py  Legendre.py  __init__.py  arguments.py  basespace.py  composite.py  coordinates.py  operators.py  sharding.py  spaces.py  tensorproductspace.py  typing.py
src/jaxfun/galerkin/: Chebyshev.py  ChebyshevU.py  Fourier.py  Jacobi.py  Lagrange.py  Legendre.py  Ultraspherical.py  __init__.py  arguments.py  cartesianproductspace.py  composite.py  forms.py  functionspace.py  inner.py  orthogonal.py  sincos.py  tensorproductspace.py
src/jaxfun/integrators/: __init__.py  backward_euler.py  base.py  etdrk4.py  nonlinear.py  rk4.py
src/jaxfun/la/: __init__.py  blockmatrix.py  blocktpmatrix.py  diamatrix.py  matrix.py  (+6 more)
src/tests/: test_approximations.py
src/utils/: common.py  diff.py  fastgl.py
tests/: conftest.py  test_approximations.py  test_coordinates.py  test_demos.py  test_embeddings.py  test_forward_backward.py  test_inner.py  testing.py
tests/coordinates/: test_additional_branches.py  test_construction.py  test_metrics_and_basis.py  test_refine_replace.py  test_refine_replace_subs.py  test_transform_and_components.py
tests/galerkin/: test_additional_coverage.py  test_approximations.py  test_arguments_and_forms.py  test_arguments_extras.py  test_backward_primitive_eval.py  test_cartesian_product.py  test_chebyshev_matrices.py  test_composite.py  test_evaluate_spmd.py  test_forms_extra.py  test_forms_processing.py  test_forward_backward.py  test_forward_backward_spmd.py  test_fourier.py  test_inner.py  test_jaxfunction.py  test_legendre_jacobi_extra.py  test_nonlinear_primitive_eval.py  test_orthogonal_extras.py  test_polynomials.py  test_precomputed_matrices.py  test_tensorproductspace.py  test_tensorproductspace_extra.py  test_tensorproductspace_more.py  test_to_from_orthogonal.py  test_to_from_orthogonal_spmd.py  test_tpmatrices_solvers.py  test_transient_trialfunction.py
tests/integrators/: test_backward_euler.py  test_etdrk4.py  test_integrator_skeleton.py  test_nls1d_etdrk4.py
tests/la/: test_diamatrix.py  test_kron.py  test_operators.py  test_tpmatrices_solvers.py
tests/operators/: test_basic_tensors.py  test_extended_operators.py
tests/pinns/: test_cartesian_module.py  test_embeddings.py  test_kan_spikan.py  test_loss.py  test_mesh.py  test_module.py  test_nnspaces.py  test_optimizer.py
tests/utils/: test_common.py  test_sympy_splitting.py
(+16 files in other folders)
