[project]
name = "jaxfun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Mikael Mortensen" }, { name = "August Femtehjell" }]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.36, !=0.6.*",
    "matplotlib>=3.9.3",
    "sympy>=1.13.3",
    "flax==0.10.7",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pytest>=8.4.1",
    "pyvista>=0.46.2",
    "ruff>=0.12.10",
    "soap-jax",
    "ipykernel>=6.30.1",
    "pytest-cov>=6.2.1",
]

[tool.uv.sources]
soap-jax = { git = "https://github.com/haydn-jones/SOAP_JAX" }

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (select with '-m slow')"]
addopts = "-m \"not slow\""

[tool.coverage.run]
branch = true
omit = ["examples/*", "tests/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
