[build-system]
build-backend = "uv_build"

requires = [
  "uv-build>=0.8,<0.9",
]

[project]
name = "jaxfun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Mikael Mortensen" }, { name = "August Femtehjell" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "flax>=0.12.3",
  "jax>=0.9",
  "matplotlib>=3.10.8",
  "optax>=0.2.6",
  "sympy>=1.14",
]

[tool.pytest.ini_options]
markers = [ "slow: marks tests as slow (select with '-m slow')" ]
addopts = "-m \"not slow\""

[tool.coverage.run]
branch = true
omit = [ "examples/*", "tests/*" ]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]

[tool.ty.src]
exclude = [ "sandbox", "examples/notebooks", "**/*.ipynb" ]

[[tool.ty.overrides]]
include = [ "examples/DrivenCavity_lstsq.py" ]
rules = { "invalid-assignment" = "ignore" }

[[tool.ty.overrides]]
include = [ "examples/sphere_helmholtz.py" ]
rules = { "possibly-missing-attribute" = "ignore" }

[dependency-groups]
dev = [
  "ipython>=9.10.0",
  "pytest>=9.0.2",
  "pyvista>=0.46.5",
  "ruff>=0.14.14",
  "soap-jax",
  "mpi4py>=4.1.1",
  "ipykernel>=7.1.0",
  "pytest-cov>=7.0.0",
  "plotly>=6.5.2",
  "marimo[recommended]>=0.15.2",
  "pre-commit>=4.3.0",
  "shapely>=2.1.2",
  "ty>=0.0.14",
]

[tool.uv.sources]
soap-jax = { git = "https://github.com/mikaem/SOAP_JAX" }
